nivasa-macros/tests/trybuild/scxml_handler_duplicate_state.rs
use nivasa_macros::scxml_handler;

#[scxml_handler(statechart = "request", state = "guard_chain", state = "done")]
fn handler() {}

fn main() {}
